--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -146,7 +146,9 @@
          padding-right: 5px;
      }
  }
- 
+ .el-dialog__wrapper .dialog-footer{
+     border-top:none!important;
+ }
  .el-input-number.is-controls-right[class*=medium] [class*=increase],
  .el-input-number.is-controls-right[class*=medium] [class*=decrease] {
      line-height: 17px;
@@ -855,14 +857,15 @@
      justify-content: space-between;
      padding: 3% 10% 2%;
      div {
-         border: 1px solid #3e4674;
-         border-radius: 100%;
+        
          width: 100px;
          height: 100px;
          position: relative;
          span {
              position: absolute;
-             line-height: 100px;
+             line-height: 100px; 
+             border: 1px solid #3e4674;
+         border-radius: 100%;
              top: 0;
              bottom: 0;
              margin: auto;
